--- a/.github/workflows/build-news.yml
+++ b/.github/workflows/build-news.yml
@@ -1,13 +1,10 @@
 name: Build News JSON
 
 on:
+  workflow_dispatch: {}
   schedule:
-    - cron: "0 0,12 * * *"   # 07:00 & 19:00 WIB (UTC 00:00 & 12:00)
-  workflow_dispatch:
-
-concurrency:
-  group: build-news
-  cancel-in-progress: true
+    # UTC: 02:05 & 14:05  → WIB: 09:05 & 21:05
+    - cron: '5 2,14 * * *'
 
 permissions:
   contents: write
@@ -18,38 +15,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20'
 
       - name: Install deps
-        run: |
-          npm init -y
-          npm i rss-parser@latest
+        run: npm i rss-parser@3
 
       - name: Build news.json
         run: node tools/rss-build.mjs
 
-      - name: Commit & push (rebase-safe)
-        env:
-          BRANCH: ${{ github.ref_name }}
+      - name: Commit & push if changed
         run: |
-          set -e
-          # jika tidak ada perubahan, selesai
-          if git diff --quiet -- news.json data/news_prev.json 2>/dev/null; then
-            echo "No changes"; exit 0
+          if git diff --quiet -- news.json; then
+            echo "No changes"
+          else
+            git config user.name  "sumberfakta-bot"
+            git config user.email "bot@users.noreply.github.com"
+            git add news.json data/news_prev.json || true
+            git commit -m "chore: refresh news.json [skip ci]"
+            git push
           fi
-
-          git config user.name  "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
-          git add news.json data/news_prev.json || true
-          git commit -m "chore: refresh news.json [skip ci]" || true
-
-          git fetch origin "$BRANCH"
-          git pull --rebase --autostash origin "$BRANCH"
-          git push origin HEAD:"$BRANCH"
