--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "index.html",   "use": "@vercel/static" },
-    { "src": "news.json",    "use": "@vercel/static" },
-    { "src": "feeds.json",   "use": "@vercel/static" },
-    { "src": "logo.svg",     "use": "@vercel/static" },
-    { "src": "data/**",      "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/", "dest": "/index.html" }
-  ],
   "cleanUrls": true,
-  "trailingSlash": false
+  "headers": [
+    {
+      "source": "/news.json",
+      "headers": [
+        { "key": "Cache-Control", "value": "no-store" }
+      ]
+    }
+  ]
 }
